# silly_packer

./: .gitmodules  CMakeLists.txt  README.md  guillotine.cpp
cmake/stb/: CMakeLists.txt
cmake/stb/src/: implementations.c
src/: guillotine.cpp  header_writer.cpp  header_writer.h  main.cpp  maxrects.cpp  maxrects_baf.cpp  packer.cpp  packer.h  rectangle_checks.h
